syntax = "proto3";

package protocol;

option java_package = "org.vision.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "common"; //Specify the class name of the generated Java file

enum ResourceCode {
  PHOTON = 0x00;
  ENTROPY = 0x01;
  SRGUARANTEE = 0x02;
  SPREAD = 0x03;
}